# pygments-lexer-yara-l

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  Makefile  README.md  preview.py  pyproject.toml  server.py
.claude/: settings.json
pygments_lexer_yaral/: __init__.py  _lexer.py
tests/: test_lexer.py
tests/examplefiles/: demo.yaral  sample.yaral
