[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pygments-lexer-yara-l"
version = "0.1.0"
description = "A Pygments plugin providing syntax highlighting for YARA-L 2.0, a language used to create detection rules for Google Security Operations (SecOps)"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Sean Whalen", email = "whalenster@gmail.com"}
]
requires-python = ">=3.8"
dependencies = [
    "pygments>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]
server = [
    "flask",
]

[project.urls]
Homepage = "https://github.com/seanthegeek/pygments-lexer-yara-l"
Repository = "https://github.com/seanthegeek/pygments-lexer-yara-l"
"Bug Tracker" = "https://github.com/seanthegeek/pygments-lexer-yara-l/issues"
Changelog = "https://github.com/seanthegeek/pygments-lexer-yara-l/blob/main/CHANGELOG.md"
Documentation = "https://github.com/seanthegeek/pygments-lexer-yara-l/blob/main/README.md"

[project.entry-points."pygments.lexers"]
yaral = "pygments_lexer_yaral:YaraLLexer"

[tool.pytest.ini_options]
testpaths = ["tests"]
